--- a/src/main/resources/templates/train/list.html
+++ b/src/main/resources/templates/train/list.html
@@ -79,6 +79,7 @@
                         <td>
                             <a class="btn btn-sm btn-primary" th:href="@{/train/}+${train.id}">编辑</a>
                             <a class="btn btn-sm btn-danger" th:href="@{/train/delete/}+${train.id}">删除</a>
+                            <a class="btn btn-sm btn-info" th:href="@{/train/info/}+${train.id}">统计</a>
                         </td>
                     </tr>
                     </tbody>
